Some style fixes and add Dark mode

--- a/src/app/explorer/explorer.component.css
+++ b/src/app/explorer/explorer.component.css
@@ -1,5 +1,5 @@
 ul {
-  padding: 0 0 0 5px;
+  padding: 0;
   list-style-type: none;
 }
 input[type="text"]
@@ -11,5 +11,6 @@ input[type="text"]
 }
 
 .btn {
-  border-radius:unset!important;
+  border-radius: unset!important;
+  border: unset!important;
 }
